pricing POC
