# docs/swagger.yaml
@@ -127,7 +127,7 @@ paths:
               $ref: '#/definitions/sqsdomain.CandidateRoutes'
             type: array
       summary: Token Routing Information
-  /tokens/metadata/{denom}:
+  /tokens/metadata:
     get:
       description: |-
         returns token metadata with chain denom, human denom, and precision.
@@ -135,10 +135,10 @@ paths:
         See `config.json` and `config-testnet.json` in root for details.
       operationId: get-token-metadata
       parameters:
-      - description: Denom can either be a human denom or a chain denom
+      - description: List of denoms where each can either be a human denom or a chain
+          denom
         in: path
-        name: denom
-        required: true
+        name: denoms
         type: string
       produces:
       - application/json
@@ -146,6 +146,8 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/domain.Token'
+            additionalProperties:
+              $ref: '#/definitions/domain.Token'
+            type: object
       summary: Token Metadata
 swagger: "2.0"
